--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -37,7 +37,7 @@
           </tr>
         </tbody>
       </table>
-      <h3><a href="/event/edit/<%= event._id%>">EDIT</a></h3>
+      <h3><a href="/events/edit/<%= event._id%>">EDIT</a></h3>
       <form action="/events/delete/<%= event._id%>" method="post">
         <button type="submit">DELETE</button>
       </form>
